<resources>
    <string name="app_name">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="action_past">Past</string>

    <string name="btn_pause">PAUSE</string>
    <string name="btn_start">START</string>
    <string name="btn_reset">RESET</string>

    <string name="show_colon">:</string>
    <string name="show_min">00</string>
    <string name="show_sec">00</string>

    <string name="ntf_timer">Timer</string>
    <string name="ntf_timeup">Timesup</string>
    <string name="ntf_ntf">notification</string>
    <string name="ntf_ticker">!!!!!!!!!!!!!!!!!!!</string>

    <!--time list-->
    <string-array name="list_time">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>
