<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ykk.hw2.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.11">

            <Spinner
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_min"
                android:entries="@array/list_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/show_colon"
                android:textSize="60sp"
                android:textColor="#008866"
                android:id="@+id/show_colon"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_sec"
                android:entries="@array/list_time" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/show_min"
                android:textSize="60sp"
                android:textColor="#00DDAA"
                android:id="@+id/show_min"
                android:textStyle="bold"
                android:layout_marginRight="7dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/show_colon"
                android:textSize="60sp"
                android:textColor="#008866"
                android:id="@+id/show_colon2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/show_sec"
                android:textSize="60sp"
                android:textColor="#00DDAA"
                android:id="@+id/show_sec"
                android:textStyle="bold"
                android:layout_marginLeft="7dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pause"
                android:textSize="30sp"
                android:id="@+id/btn_pause" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start"
                android:textSize="30sp"
                android:id="@+id/btn_start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:textSize="30sp"
                android:id="@+id/btn_reset" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
